# colight

./: Cargo.toml  LICENSE  README.md
.github/: test.yml
.github/workflows/: CI.yml  test.yml
src/: ansi_stripper.rs  main.rs  window_searcher.rs
