[package]
name = "colight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.4.8", features = ["derive"] }
colorous = "1.0.12"
scopeguard = "1.2.0"
strip-ansi-escapes = "0.2.0"
termcolor = "1.2.0"
